# mealy

./: README.md  pyproject.toml
examples/: mealy_example.py
mealy/: __init__.py  mealy.py  mealy_automat.py  node.py  state.py
tests/: test_mealy.py
