[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mealy"
author = "Jan Felix Langenbach"
author-email = "o.hase3@gmail.com"
home-page = "https://github.com/Janfel/mealy"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

